--- a/Styles/SyntaxHighlighter.css
+++ b/Styles/SyntaxHighlighter.css
@@ -72,7 +72,7 @@
 }
 
 .dp-highlighter .columns {
-    background-color: #f7f7f7;
+    background-color: #F8F8F8;
     color: gray;
     overflow: hidden;
     width: 100%;
@@ -81,9 +81,6 @@
 .dp-highlighter .columns div {
     padding-bottom: 5px;
 }
-
-
-/* each line  */
 
 .dp-highlighter ol li.alt {
     background-color: #D3D3D3;
